--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "googlepay-react",
+  "name": "gpay-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-pay/button-react": "^2.1.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
